Add make-transfer form with validations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,14 @@
 </div>
 
 <div class="body container-fluid">
-
+  <div class="container-md">
+    <div class="row">
+      <div class="col-12 col-sm-8 offset-sm-2 offset-md-0 col-md-6 col-lg-4">
+        <app-make-transfer></app-make-transfer>
+      </div>
+      <div class="col-12 col-md-6 col-lg-8"></div>
+    </div>
+  </div>
 </div>
 <div class="footer">
   <app-footer></app-footer>
