Add transactions history list

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@ $bg-image:'/assets/background.jpg';
   height: $body-height;
   top:$header-height;
   bottom:$footer-height;
-  padding-top: 60px;
+  padding: 60px 0px;
   overflow:auto;
 }
 .footer{
