--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
       <div class="col-12 col-sm-8 offset-sm-2 offset-md-0 col-md-6 col-lg-4">
         <app-make-transfer></app-make-transfer>
       </div>
-      <div class="col-12 col-md-6 col-lg-8"></div>
+      <div class="col-12 col-md-6 col-lg-8  mt-4 mt-md-0">
+        <app-transactions></app-transactions>
+      </div>
     </div>
   </div>
 </div>
