--- a/src/app/components/make-transfer/make-transfer.component.html
+++ b/src/app/components/make-transfer/make-transfer.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <i class="bi bi-credit-card-2-back"></i>
+    <i class="lni lni-credit-cards"></i>
     <span class="ps-2">
       <strong>Make</strong> Transfer
     </span>
