Remove bootstrap icons

--- a/src/app/bb-ui/components/filter/filter.component.html
+++ b/src/app/bb-ui/components/filter/filter.component.html
@@ -4,6 +4,7 @@
       <div class="input-group-text"><i class="lni lni-search"></i></div>
       <input
         (keyup)="onInputChange($event.target.value)"
+        autocomplete="off"
         type="text"
         class="form-control"
         id="transactions"
