--- a/src/app/components/make-transfer/make-transfer.component.html
+++ b/src/app/components/make-transfer/make-transfer.component.html
@@ -46,13 +46,13 @@
 </div>
 
 <ng-template #invalidTransactionFormRef>
-  <label><i class="bi bi-exclamation-circle-fill text-danger"></i>&nbsp; Failed</label>
+  <label><i class="lni lni-cross-circle text-danger"></i>&nbsp; Failed</label>
   <hr/>
   <p>Can not submit transfer with invalid parameters, check form errors.</p>
 </ng-template>
 
 <ng-template #successfulTransactionRef>
-  <label><i class="bi bi-check2 text-success"></i>&nbsp; Succeeded</label>
+  <label><i class="lni lni-checkmark text-success"></i>&nbsp; Succeeded</label>
   <hr/>
   <p>Transaction is successfully submitted.</p>
 </ng-template>
