--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<!--(header)-->
 <div class="header">
   <app-logo></app-logo>
 </div>
 
+<!--(body)-->
 <div class="body container-fluid">
   <div class="container-md">
     <div class="row">
@@ -9,11 +11,15 @@
         <app-make-transfer></app-make-transfer>
       </div>
       <div class="col-12 col-md-6 col-lg-8 mt-4 mt-md-0">
-        <app-transactions [transactions]="(transactionsService.transactions$ | async) || []"></app-transactions>
+        <app-transactions
+          [transactions]="(transactionsService.transactions$ | async) || []"
+        ></app-transactions>
       </div>
     </div>
   </div>
 </div>
+
+<!--(footer)-->
 <div class="footer">
   <app-footer></app-footer>
 </div>
